# helm-plugin-MCP

./: .gitignore  README.md  README_zh.md  pack.bat  pyproject.toml  setup.py
docs/: README.md  README_zh.md
helm_mcp/: mcp_server.py  models.py  plugin.py  protocols.py  routers.py  schemas.py
helm_mcp/frontend/: index.html  package-lock.json  package.json  vite.config.ts
helm_mcp/frontend/src/: App.vue  env.d.ts
helm_mcp/frontend/src/components/keys/: ConfigDisplay.vue  KeyCreateForm.vue  PanelKeys.vue
helm_mcp/frontend/src/components/layout/: TabBar.vue  ToastNotice.vue
helm_mcp/frontend/src/components/logs/: LogFilter.vue  LogTable.vue  Pagination.vue  PanelLogs.vue
helm_mcp/frontend/src/components/servers/: PanelServers.vue
helm_mcp/frontend/src/components/tools/: PanelTools.vue  ToolCard.vue
helm_mcp/frontend/src/components/ui/: HelmSelect.vue
helm_mcp/frontend/src/composables/: useApiFetch.ts  useHelmSDK.ts  useI18n.ts  useToast.ts
helm_mcp/frontend/src/locales/: en.ts  zh.ts
helm_mcp/frontend/src/styles/: global.css
helm_mcp/migrations/: alembic.ini  env.py
helm_mcp/migrations/versions/: 0001_initial.py  0002_multi_server.py
helm_mcp/tool_providers/: core.py
