[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helm-plugin-mcp"
version = "0.2.0"
description = "Helm MCP Bridge — 通过 Model Context Protocol 将 Helm 暴露给大型语言模型"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Jerry-Scintilla", email = "jerrycaocao@126.com" }]
keywords = ["helm", "eve-online", "plugin", "mcp", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.1,<2.0",
]

[project.urls]
Homepage = "https://github.com/Fusion-Cyber/helm-plugin-index"

[project.entry-points."helm.plugins"]
helm-mcp = "helm_mcp.plugin:HelmMCPPlugin"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
helm_mcp = [
    "frontend/dist/**",
    "migrations/versions/*.py",
]
